Depth limit adjust

--- a/Search Algorithms/Depth first search and Breadth First Search.ipynb
+++ b/Search Algorithms/Depth first search and Breadth First Search.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "8f1961a3",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "e862f367",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "30612727",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "id": "59a6f9b5",
    "metadata": {},
    "outputs": [
@@ -152,24 +152,26 @@
       "===== Start1 =====\n",
       "BFS solution:\n",
       "  Moves: 2\n",
-      "  Execution time: 0.0000 seconds\n",
+      "  Execution time: 0.0001 seconds\n",
       "DFS solution:\n",
       "  Moves: 2\n",
-      "  Execution time: 0.000006 seconds\n",
+      "  Execution time: 0.000013 seconds\n",
       "\n",
       "===== Start2 =====\n",
       "BFS solution:\n",
       "  Moves: 4\n",
       "  Execution time: 0.0001 seconds\n",
       "DFS solution:\n",
-      "  No solution.\n",
+      "  Moves: 26\n",
+      "  Execution time: 0.000072 seconds\n",
       "\n",
       "===== Start3 =====\n",
       "BFS solution:\n",
       "  Moves: 20\n",
-      "  Execution time: 0.0794 seconds\n",
+      "  Execution time: 0.1964 seconds\n",
       "DFS solution:\n",
-      "  No solution.\n"
+      "  Moves: 46\n",
+      "  Execution time: 0.062069 seconds\n"
      ]
     }
    ],
@@ -218,7 +220,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    optimal_dfs_depth = 3  # TODO For the different test cases, find the optimal depth limit for DFS\n",
+    "    optimal_dfs_depth = 50  # TODO For the different test cases, find the optimal depth limit for DFS\n",
     "    run_test_cases(dfs_depth_limit=optimal_dfs_depth)\n"
    ]
   }
