--- a/Constraint Satisfaction/AI_4_Eng_Ass2_Graph_&_CSP.ipynb
+++ b/Constraint Satisfaction/AI_4_Eng_Ass2_Graph_&_CSP.ipynb
@@ -5,14 +5,24 @@
    "id": "c4a7d597",
    "metadata": {},
    "source": [
-    "# Introduction to Graph and CSP Implementation\n",
+    "# Graph Theory and CSP Implementation\n",
     "\n",
     "This code implements a `Graph` class for analyzing graph properties and a `CSP` class for solving constraint satisfaction problems using backtracking, forward checking, and the AC-3 algorithm. The `Graph` class supports checking for Euler and Hamiltonian paths, while the `CSP` class is applied to a graph coloring problem, ensuring adjacent nodes have different colors. The provided example uses a graph representing Australian regions to demonstrate both graph analysis and CSP solving techniques."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "id": "0b4d5b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c2108123",
    "metadata": {},
    "outputs": [],
@@ -55,8 +65,12 @@
     "          Euler path exists if one node has (out-in)=1,\n",
     "          one node has (in-out)=1, and all others have in=out.\n",
     "        \"\"\"\n",
-    "        # TODO: Identify nodes with odd degree\n",
-    "        odd_degree_nodes = NotImplemented\n",
+    "        # : Identify nodes with odd degree\n",
+    "        node_degrees = []\n",
+    "        for node in self.nodes:\n",
+    "            node_degrees.append(self.degree(node))\n",
+    "        \n",
+    "        odd_degree_nodes = [node for node in node_degrees if node % 2 != 0]\n",
     "        \n",
     "        if len(odd_degree_nodes) == 0:\n",
     "            return True\n",
@@ -72,28 +86,29 @@
     "        n = len(self.nodes)\n",
     "\n",
     "        def dfs(current, visited):\n",
-    "            # TODO: Check if all nodes are visited\n",
-    "            if NotImplemented:\n",
+    "            # : Check if all nodes are visited\n",
+    "            visited.append(current)\n",
+    "            if Counter(visited) == Counter(self.nodes):\n",
     "                return True\n",
     "            for neighbor in self.adj_list[current]:\n",
-    "                # TODO: Check if neighbor is unvisited\n",
-    "                if NotImplemented:\n",
-    "                    # TODO: Recurse with updated visited list\n",
-    "                    if NotImplemented:\n",
+    "                # : Check if neighbor is unvisited\n",
+    "                if neighbor not in visited:\n",
+    "                    # : Recurse with updated visited list\n",
+    "                    if dfs(neighbor, visited):\n",
     "                        return True\n",
     "            return False\n",
     "\n",
     "        # Try starting DFS from each node\n",
     "        for start in self.nodes:\n",
-    "            # TODO: Start DFS from current node\n",
-    "            if NotImplemented:\n",
+    "            # : Start DFS from current node\n",
+    "            if dfs(start, []):\n",
     "                return True\n",
-    "        return False"
+    "        return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c1c86854",
    "metadata": {},
    "outputs": [],
@@ -144,16 +159,17 @@
     "            self.steps += 1  # count assignment attempt\n",
     "\n",
     "            if self.is_consistent(var, value, assignment):\n",
-    "                # TODO: Assign value to variable\n",
-    "                \n",
-    "                # TODO: Recurse with updated assignment\n",
-    "                result = NotImplemented\n",
+    "                # : Assign value to variable\n",
+    "                assignment.setdefault(var, value)\n",
+    "                # : Recurse with updated assignment\n",
+    "                result = self.backtrack(assignment)\n",
     "\n",
-    "                # TODO: Check if solution is found\n",
-    "                if NotImplemented:\n",
+    "                # : Check if solution is found\n",
+    "                if len(assignment) == len(self.variables):\n",
     "                    return result\n",
     "\n",
-    "                # TODO: Undo assignment\n",
+    "                # : Undo assignment\n",
+    "                assignment.popitem()\n",
     "                \n",
     "        return None\n",
     "\n",
@@ -173,7 +189,10 @@
     "        if assignment is None:\n",
     "            assignment = {}\n",
     "\n",
-    "        # TODO: Initialize domains if not provided\n",
+    "        # : Initialize domains if not provided\n",
+    "        if domains is None:\n",
+    "            domains = {v: self.domains[v][:] for v in self.variables}\n",
+    "        \n",
     "\n",
     "\n",
     "        if len(assignment) == len(self.variables):\n",
@@ -190,25 +209,27 @@
     "            if self.is_consistent(var, value, assignment):\n",
     "                new_assignment = assignment.copy()\n",
     "\n",
-    "                # TODO: Assign value to variable\n",
+    "                # : Assign value to variable\n",
+    "                new_assignment.setdefault(var, value)\n",
     "\n",
     "                # Copy domains and prune neighbors\n",
     "                new_domains = {v: domains[v][:] for v in self.variables}\n",
     "                for (x, y), constraint in self.constraints.items():\n",
-    "                    # TODO: Check if constraint involves current variable\n",
-    "                    if NotImplemented:\n",
-    "                        # TODO: Identify values to prune\n",
-    "                        removed = NotImplemented\n",
-    "                        # TODO: Remove inconsistent values\n",
-    "                        for NotImplemented:\n",
-    "                            # TODO Update neighbor's domain\n",
+    "                    # : Check if constraint involves current variable\n",
+    "                    if x == var or y == var:\n",
+    "                        # : Identify values to prune\n",
+    "                        removed = [nextval for nextval in list(new_domains[y]) if x == var and not constraint(value, nextval)]\n",
+    "                        # : Remove inconsistent values\n",
+    "                        for rv in removed:\n",
+    "                            # : Update neighbor's domain\n",
+    "                            new_domains[y].remove(rv)\n",
     "\n",
     "                        # Check for empty domain\n",
     "                        if not new_domains[y]:\n",
     "                            break\n",
     "                else:\n",
-    "                    # TODO: Recurse with updated assignment and domains\n",
-    "                    result = NotImplemented\n",
+    "                    # : Recurse with updated assignment and domains\n",
+    "                    result = self.forward_checking(new_assignment, new_domains)\n",
     "                    # Check if solution is found\n",
     "                    if result is not None:\n",
     "                        return result\n",
@@ -229,22 +250,25 @@
     "                - If domain shrinks, add neighbors back to queue.\n",
     "            * If any domain becomes empty → inconsistency found.\n",
     "        \"\"\"\n",
-    "        # TODO: Initialize domains if not provided\n",
+    "        # : Initialize domains if not provided\n",
+    "        if domains is None:\n",
+    "            domains = {v: self.domains[v][:] for v in self.variables}\n",
     "\n",
     "        queue = list(self.constraints.keys())\n",
     "\n",
     "        while queue:\n",
-    "            # TODO: Remove arc from queue\n",
-    "            (xi, xj) = NotImplemented\n",
+    "            # : Remove arc from queue\n",
+    "            (xi, xj) = queue.pop()\n",
     "            if self.revise(domains, xi, xj):\n",
-    "                # TODO: Check for empty domain\n",
-    "                if NotImplemented:\n",
+    "                # : Check for empty domain\n",
+    "                if domains[xi] == []:\n",
     "                    # Return failure if domain is empty\n",
     "                    return False, domains\n",
     "                for (xk, xl) in self.constraints:\n",
-    "                    # TODO: Check if arc needs to be requeued\n",
-    "                    if NotImplemented:\n",
-    "                        # TODO: Add arc to queue\n",
+    "                    # : Check if arc needs to be requeued\n",
+    "                    if xl == xi and xk != xj:\n",
+    "                        # : Add arc to queue\n",
+    "                        queue.append((xk, xl))\n",
     "\n",
     "        return True, domains\n",
     "\n",
@@ -253,19 +277,40 @@
     "        constraint = self.constraints[(xi, xj)]\n",
     "        for x in domains[xi][:]:\n",
     "            if not any(constraint(x, y) for y in domains[xj]):\n",
-    "                # TODO: Remove inconsistent value\n",
-    "\n",
+    "                # : Remove inconsistent value\n",
+    "                domains[xi].remove(x)\n",
     "                revised = True\n",
     "                \n",
-    "        return revised"
+    "        return revised\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3c3dbfdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Degree Centrality: {'WA': 2, 'NT': 3, 'SA': 5, 'Q': 3, 'NSW': 3, 'V': 2, 'T': 0}\n",
+      "Euler Path Exists? False\n",
+      "Hamiltonian Path Exists? False\n",
+      "\n",
+      "--- Backtracking ---\n",
+      "Solution: None \n",
+      "Steps: 5\n",
+      "\n",
+      "--- Forward Checking ---\n",
+      "Solution: None \n",
+      "Steps: 2\n",
+      "\n",
+      "--- AC-3 + Backtracking ---\n",
+      "AC-3 detected inconsistency before search!\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # Graph example\n",
@@ -280,11 +325,12 @@
     "    print(\"Hamiltonian Path Exists?\", graph.has_hamiltonian_path())\n",
     "\n",
     "    # CSP setup\n",
-    "    # TODO: Define domains for graph coloring\n",
+    "    # : Define domains for graph coloring\n",
     "    domains = {v: [\"Red\", \"Green\"] for v in nodes}\n",
     "    domains[\"WA\"] = [\"Red\"]\n",
     "    constraints = {(u, v): (lambda a, b: a != b) for (u, v) in edges}\n",
     "    constraints.update({(v, u): (lambda a, b: a != b) for (u, v) in edges})\n",
+    "    \n",
     "\n",
     "    csp = CSP(nodes, domains, constraints)\n",
     "\n",
@@ -308,13 +354,13 @@
     "    else:\n",
     "        csp.steps = 0\n",
     "        sol = csp.backtrack()\n",
-    "        print(\"Solution:\", sol, \"\\nSteps:\", csp.steps)"
+    "        print(\"Solution:\", sol, \"\\nSteps:\", csp.steps)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
