--- a/Knowledge graphs/knowledge_graph_workshop.ipynb
+++ b/Knowledge graphs/knowledge_graph_workshop.ipynb
@@ -2,35 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad435a97",
-   "metadata": {},
-   "source": [
-    "# 📝 Turning Text into a Knowledge Graph with Python\n",
-    "### Course: AI for Engineers\n",
-    "### Topic: Knowledge Graphs & AI\n",
-    "### Objective: Learn how to transform text into a knowledge graph using Python, an LLM, and visualization tools."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9474ea9",
-   "metadata": {},
-   "source": [
-    "## Step 1: Install Dependencies\n",
-    "Run this cell to install required libraries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "aa5c8d13",
    "metadata": {},
    "source": [
-    "## Step 2: Import Libraries"
+    "## Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "a3d14e18",
    "metadata": {},
    "outputs": [],
@@ -44,12 +24,12 @@
    "id": "5c676229",
    "metadata": {},
    "source": [
-    "## Step 3: Provide Text Input"
+    "## Provide Text Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "307bf6dd",
    "metadata": {},
    "outputs": [
@@ -61,6 +41,10 @@
       "Alice is an engineer who uses Python for data analysis. \n",
       "Bob works with MATLAB on climate modeling projects. \n",
       "Carol applies TensorFlow in healthcare AI systems.\n",
+      "Carol leaerned from Alice.\n",
+      "Carol is dating Bob.\n",
+      "Carol dislikes MATLAB.\n",
+      "Carol knows Python.\n",
       "\n"
      ]
     }
@@ -83,13 +67,13 @@
    "id": "3e7ff0a8",
    "metadata": {},
    "source": [
-    "## Step 4: Extract Entities & Relationships (Simulated LLM Output)\n",
+    "## Extract Entities & Relationships (Simulated LLM Output)\n",
     "In a real scenario, you would call an LLM like GPT to extract triples. For this exercise, we'll use a predefined list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "id": "cb732124",
    "metadata": {},
    "outputs": [
@@ -107,7 +91,7 @@
        " ('Carol', 'knows', 'Python')]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +117,12 @@
    "id": "ef62ad33",
    "metadata": {},
    "source": [
-    "## Step 5: Build the Graph"
+    "## Build the Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "id": "04ab4fa0",
    "metadata": {},
    "outputs": [
@@ -168,12 +152,12 @@
    "id": "6377a87f",
    "metadata": {},
    "source": [
-    "## Step 6: Visualize the Graph"
+    "## Visualize the Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "cd8023c4",
    "metadata": {},
    "outputs": [
@@ -201,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "id": "ed4fb1c8",
    "metadata": {},
    "outputs": [
@@ -225,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "id": "39522a69",
    "metadata": {},
    "outputs": [
@@ -248,19 +232,6 @@
     "nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_color='red')\n",
     "plt.title(\"Knowledge Graph from Text\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04ee74f8-6a0f-4f75-9d5e-689610012ae0",
-   "metadata": {},
-   "source": [
-    "Questions:\n",
-    "•\tWhich entity has the highest degree centrality?\n",
-    "•\tHow could adding more text improve the richness of relationships?\n",
-    "•\tAdd a new sentence to the text (e.g., 'TensorFlow supports AI Healthcare.').\n",
-    "•\tUpdate triples and regenerate the graph.\n",
-    "•\tHighlight the most central node in a different color \n"
    ]
   }
  ],
