--- a/Search Algorithms/Depth first search and Breadth First Search.ipynb
+++ b/Search Algorithms/Depth first search and Breadth First Search.ipynb
@@ -1,21 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1f5413d5",
-   "metadata": {},
-   "source": [
-    "# Assignment 1- Part2 : 04-655   Artificial Intelligence for Engineers\n",
-    "## Instructions:\n",
-    "### Fill in all the sections of the code marked with **#TODO**. in the BFS, DFS  and in the main function of the notebook \n",
-    "\n",
-    "### **Hint**\n",
-    "- See Chapter 3: SOLVING PROBLEMS BY SEARCHING of the book \"Artificial Intelligence A Modern  Approach 4th Edition\" for reference and theoritical understanding of BFS and DFS algorithms."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "8f1961a3",
    "metadata": {},
    "outputs": [],
@@ -66,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "e862f367",
    "metadata": {},
    "outputs": [],
@@ -79,23 +66,23 @@
     "    - The queue stores tuples of (state, path)\n",
     "    \"\"\"\n",
     "    queue = deque([(start_state, [start_state])])  # (state, path)\n",
-    "    # TODO : Initialize the visited set with the start state\n",
+    "    # : Initialize the visited set with the start state\n",
     "    visited = set([start_state])\n",
     "\n",
     "    while queue:\n",
-    "        # TODO: Pop from the front of the queue (FIFO)\n",
+    "        # : Pop from the front of the queue (FIFO)\n",
     "        state, path = queue.popleft()\n",
     "        \n",
-    "        # TODO: Check if the goal has been reached\n",
+    "        # : Check if the goal has been reached\n",
     "        if state == GOAL_STATE:\n",
     "            return path\n",
     "\n",
     "        for neighbor in get_neighbors(state):\n",
-    "            # TODO: Check if neighbor is unvisited\n",
+    "            # : Check if neighbor is unvisited\n",
     "            if neighbor not in visited:\n",
-    "                # TODO: Mark neighbor as visited\n",
+    "                # : Mark neighbor as visited\n",
     "                visited.add(neighbor)\n",
-    "                # TODO: Add neighbor to the queue with updated path\n",
+    "                # : Add neighbor to the queue with updated path\n",
     "                queue.append((neighbor, path + [neighbor]))\n",
     "                \n",
     "\n",
@@ -104,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "30612727",
    "metadata": {},
    "outputs": [],
@@ -115,32 +102,32 @@
     "    - The stack stores tuples of (state, path)\n",
     "    - At the beginning the path is empty. \"\"\"\n",
     "    \n",
-    "    stack = [(start_state, [start_state])]  # (state, path)\n",
+    "    stack = [(start_state, [])]  # (state, path)\n",
     "    visited = set([start_state]) # Keep track of visited states to avoid infinite loops\n",
     "\n",
     "    while stack:\n",
-    "        # TODO: Pop the last element from the stack\n",
+    "        # : Pop the last element from the stack\n",
     "        state, path = stack.pop()\n",
     "\n",
-    "        # TODO: Check if we have reached the goal state\n",
+    "        # : Check if we have reached the goal state\n",
     "        if state == GOAL_STATE:\n",
-    "            return path\n",
+    "            return path + [state]\n",
     "\n",
     "        if len(path) < depth_limit:  # avoid infinite loops\n",
     "            for neighbor in get_neighbors(state):\n",
     "                if neighbor not in visited:\n",
-    "                    # TODO: Mark the neighbor as visited\n",
+    "                    # : Mark the neighbor as visited\n",
     "                    visited.add(neighbor)\n",
-    "                    # TODO: Add neighbor to stack with updated path\n",
-    "                    stack.append((neighbor, path + [neighbor]))\n",
     "                    \n",
+    "                    # : Add neighbor to stack with updated path\n",
+    "                    stack.append((neighbor, path + [neighbor]))\n",
     "\n",
     "    return None  # No solution found\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "59a6f9b5",
    "metadata": {},
    "outputs": [
@@ -152,7 +139,7 @@
       "===== Start1 =====\n",
       "BFS solution:\n",
       "  Moves: 2\n",
-      "  Execution time: 0.0001 seconds\n",
+      "  Execution time: 0.0000 seconds\n",
       "DFS solution:\n",
       "  Moves: 2\n",
       "  Execution time: 0.000013 seconds\n",
@@ -163,15 +150,15 @@
       "  Execution time: 0.0001 seconds\n",
       "DFS solution:\n",
       "  Moves: 26\n",
-      "  Execution time: 0.000072 seconds\n",
+      "  Execution time: 0.000065 seconds\n",
       "\n",
       "===== Start3 =====\n",
       "BFS solution:\n",
       "  Moves: 20\n",
-      "  Execution time: 0.1964 seconds\n",
+      "  Execution time: 0.1502 seconds\n",
       "DFS solution:\n",
-      "  Moves: 46\n",
-      "  Execution time: 0.062069 seconds\n"
+      "  Moves: 50\n",
+      "  Execution time: 0.008464 seconds\n"
      ]
     }
    ],
@@ -220,7 +207,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    optimal_dfs_depth = 50  # TODO For the different test cases, find the optimal depth limit for DFS\n",
+    "    optimal_dfs_depth = 50  # For the different test cases, find the optimal depth limit for DFS\n",
     "    run_test_cases(dfs_depth_limit=optimal_dfs_depth)\n"
    ]
   }
